# CHESSADAPT

./: .gitattributes  .gitignore  Makefile  README.md  config.yaml  conftest.py  dvs  executive-function.txt  main.py  main1.py  pyproject.toml  requirements.txt  smoke_test_simple.py  test_metrics_terminal.py
data/positions/: positions.jsonl  positions_2.jsonl
data/results/: report.md
data/results/claude-3.7-sonnet-or/: checkpoint.jsonl  run_summary.json
data/results/gpt-4o-or/: checkpoint.jsonl  run_summary.json
data/results_metacognition/: report_metacognition.md
data/tasks/: t1_tasks.jsonl  t2_tasks.jsonl  t3_tasks.jsonl
data/tasks_metacognition/: t3_tasks.jsonl
dataset/: t3_tasks.jsonl
docs/: final_report_insights.md  openrouter_test_plan.md  submission_plan.md  writeup.md
engine/: README.md  base.py  legal_moves.py  registry.py  validator.py
engine/composition/: __init__.py  composer.py  experiment.py  metrics.py  mixins.py
engine/rules/movement/: README.md  (+8 more)
engine/tests/: test_composition.py  test_movement_rules.py  test_turn_structure.py  test_win_condition.py
engine/utils/: visualizer.py
evaluation/: __init__.py  analysis.py  llm_client.py  prompt_builder.py  response_parser.py  runner.py  task_generator.py
pipeline/: difficulty.py  hf_loader.py  hf_loader_part2.py  pairer.py  prompt_builder.py  prompt_builder_metacognition.py  run_metacognition.py  run_pipeline.py  serializer.py
tasks/: schemas.py
tests/: __init__.py  schemas.py  test_metacognition.py  test_prompt_builder.py  test_registry.py  test_response_parser.py  test_smoke.py
(+3148 files in other folders)
